k8s/logstash.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logstash
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logstash
  template:
    metadata:
      labels:
        app: logstash
    spec:
      containers:
        - name: logstash
          image: docker.elastic.co/logstash/logstash:7.17.0
          ports:
            - containerPort: 5000
#          readinessProbe:
#            tcpSocket:
#              port: 5000
#            initialDelaySeconds: 30
#            periodSeconds: 5
#            failureThreshold: 10
          volumeMounts:
            - name: logstash-storage
              mountPath: /usr/share/logstash/pipeline/
      volumes:
        - name: logstash-storage
          configMap:
            name: logstash-config
---
apiVersion: v1
kind: Service
metadata:
  name: logstash
spec:
  selector:
    app: logstash
  ports:
    - port: 5000
      targetPort: 5000
